--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -21,6 +21,7 @@ Check the appropriate sections of the documentation depending on your needs:
 - [`PPOTrainer`](trainer): *Further fine-tune the supervised fine-tuned model using PPO algorithm*
 - [Best-of-N Sampling](best-of-n): *Use best of n sampling as an alternative way to sample predictions from your active model*
 - [`DPOTrainer`](trainer): *Direct Preference Optimization training using `DPOTrainer`.*
+- [`TextEnvironment`](text_environment): *Text environment to train your model using tools with RL.*
 
 ## Examples
 
@@ -28,6 +29,7 @@ Check the appropriate sections of the documentation depending on your needs:
 - [Training with PEFT](lora_tuning_peft): *Memory efficient RLHF training using adapters with PEFT*
 - [Detoxifying LLMs](detoxifying_a_lm): *Detoxify your language model through RLHF*
 - [StackLlama](using_llama_models): *End-to-end RLHF training of a Llama model on Stack exchange dataset*
+- [Learning with Tools](learning_tools): *Walkthrough of using `TextEnvironments`*
 - [Multi-Adapter Training](multi_adapter_rl): *Use a single base model and multiple adapters for memory efficient end-to-end training*
 
 
